@@ -1,3 +1,9 @@
+2014-04-20 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCpeeph.c,
+	  src/stm8/peeph.def:
+	  Applied a variant of patch #237 by Ben Shi, implementing RFE #400.
+
 2014-04-16 Molnar Karoly <molnarkaroly AT users.sf.net>
 	* support/scripts/cinc2h.pl,
 	  support/scripts/mcs51-disasm.pl,
